// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alerts reducer createAlert 1`] = `
Object {
  "payload": Object {
    "alert": Object {
      "body": "test body",
      "id": "123-456",
      "title": "test alert",
    },
    "type": "failed",
  },
  "type": "@alerts/CREATE_ALERT",
}
`;

exports[`alerts reducer removeAlert 1`] = `
Object {
  "payload": Object {
    "alert": Object {
      "id": "123-456",
    },
  },
  "type": "@alerts/REMOVE_ALERT",
}
`;
